--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-redux": "^9.2.0",
-    "uuid": "^13.0.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "19.0.2",
